manifests/12-route-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
  namespace: pod-hunt
spec:
  host: podhunt.apps.vrutkovs-k8s-podhunt.devcluster.openshift.com
  subdomain: ''
  path: /kill
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
